# bridge

./: CMakeLists.txt
lib/: CMakeLists.txt
lib/bidding/: CMakeLists.txt
lib/bidding/include/bidding/: bidding.h  bids.h
lib/bidding/src/: bidding.cpp
lib/hand/: CMakeLists.txt
lib/hand/include/hand/: evalhand.h  hand.h
lib/hand/src/: evalhand.cpp  hand.cpp
lib/headersOnly/: CMakeLists.txt
tests/: CMakeLists.txt
tests/hand/: CMakeLists.txt  unitCatch.cpp
